--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
             <artifactId>commons-dbcp2</artifactId>
             <version>2.12.0</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.maxmind.geoip2</groupId>
+            <artifactId>geoip2</artifactId>
+            <version>2.15.0</version> <!-- Verifica la última versión en https://mvnrepository.com/artifact/com.maxmind.geoip2/geoip2 -->
+        </dependency>
+
 
         
     </dependencies>
